--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Complete Responsive Personal Portfolio Website Design Tutorial
+      Sahil Dawara Portfolio
     </title>
+
+    <link rel="icon" href="images/logo.jpg" type="image/icon type">
 
     <!-- font awesome cdn link  -->
     <link
@@ -93,7 +95,7 @@
 
     <!-- about section ends -->
 
-    <!-- blogs section starts  -->
+    <!-- code profile section starts  -->
 
     <section class="blogs" id="blogs">
       <h1 class="heading"><span> coding </span> profile</h1>
@@ -132,9 +134,9 @@
         </div>
     </section>
 
-    <!-- blogs section ends -->
+    <!-- code profile section ends -->
 
-    <!-- services section starts  -->
+    <!-- skills section starts  -->
 
     <section class="services" id="services">
       <h1 class="heading">my<span> skills </span> </h1>
@@ -177,9 +179,9 @@
       </div>
     </section>
 
-    <!-- services section ends -->
+    <!-- skills section ends -->
 
-    <!-- portfolio section starts  -->
+    <!-- projects section starts  -->
 
     <section class="portfolio" id="portfolio">
       <h1 class="heading">my<span> projects </span></h1>
@@ -236,7 +238,7 @@
       </div>
     </section>
 
-    <!-- portfolio section ends -->
+    <!-- projects section ends -->
 
     <!-- contact section starts  -->
 
